fix spacing for mobile

--- a/style.css
+++ b/style.css
@@ -182,12 +182,15 @@ video {
 .text-overlay {
   grid-area: txt;
   z-index: 3;
-  padding: 0 1rem;
-  margin: 0 2rem;
+  padding: 1rem;
+  margin: 0;
 }
 
 @media (min-width: 640px) {
-  .text-overlay { max-width: 50em; }
+  .text-overlay {
+    max-width: 50em;
+    padding: 1rem 3rem;
+  }
 }
 
 .text-overlay span {
